# spin-workshop-2025

./: .dockerignore  API.md  Dockerfile  LICENSE.md  OVERVIEW.md  README.md  image-repository-api.postman_collection.json  image-repository-api.postman_environment.json  init.sql
image-repo/: .gitignore  requirements.txt  spin.toml
image-repo/derived/: go.mod  go.sum  main.go
image-repo/init/: app.py
image-repo/maintenance/: Cargo.toml
image-repo/maintenance/src/: lib.rs
image-repo/originals/: package-lock.json  package.json
image-repo/originals/src/: index.ts
image-repo/transformer/: go.mod  go.sum  main.go
